--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,6 @@
 /language/en-GB/
 /language/overrides/
 /language/index.html
-/language/pl-PL/
 /components/com_contact/
 /components/index.html
 /components/com_config/
@@ -74,3 +73,87 @@
 /administrator/components/com_search/
 /administrator/components/com_contact/
 /administrator/components/com_contenthistory/
+/language/pl-PL/pl-PL.mod_articles_archive.sys.ini
+/language/pl-PL/pl-PL.finder_cli.ini
+/language/pl-PL/pl-PL.com_weblinks.ini
+/language/pl-PL/pl-PL.lib_phputf8.sys.ini
+/language/pl-PL/pl-PL.mod_articles_popular.sys.ini
+/language/pl-PL/pl-PL.mod_articles_category.sys.ini
+/language/pl-PL/pl-PL.mod_articles_archive.ini
+/language/pl-PL/pl-PL.com_search.ini
+/language/pl-PL/pl-PL.com_newsfeeds.ini
+/language/pl-PL/pl-PL.com_mailto.ini
+/language/pl-PL/pl-PL.mod_footer.sys.ini
+/language/pl-PL/pl-PL.mod_banners.sys.ini
+/language/pl-PL/pl-PL.mod_articles_category.ini
+/language/pl-PL/pl-PL.localise.php
+/language/pl-PL/pl-PL.mod_login.ini
+/language/pl-PL/pl-PL.com_wrapper.ini
+/language/pl-PL/pl-PL.com_config.ini
+/language/pl-PL/pl-PL.mod_articles_news.sys.ini
+/language/pl-PL/pl-PL.lib_joomla.ini
+/language/pl-PL/pl-PL.lib_joomla.sys.ini
+/language/pl-PL/pl-PL.mod_articles_categories.ini
+/language/pl-PL/pl-PL.mod_languages.ini
+/language/pl-PL/pl-PL.mod_banners.ini
+/language/pl-PL/pl-PL.lib_fof.sys.ini
+/language/pl-PL/pl-PL.mod_feed.sys.ini
+/language/pl-PL/pl-PL.mod_custom.sys.ini
+/language/pl-PL/pl-PL.mod_articles_popular.ini
+/language/pl-PL/pl-PL.mod_finder.ini
+/language/pl-PL/install.xml
+/language/pl-PL/pl-PL.com_finder.ini
+/language/pl-PL/pl-PL.com_contact.ini
+/language/pl-PL/pl-PL.mod_menu.ini
+/language/pl-PL/pl-PL.mod_footer.ini
+/language/pl-PL/pl-PL.files_joomla.sys.ini
+/language/pl-PL/pl-PL.com_content.ini
+/language/pl-PL/pl-PL.com_users.ini
+/language/pl-PL/pl-PL.com_ajax.ini
+/language/pl-PL/pl-PL.mod_articles_categories.sys.ini
+/language/pl-PL/pl-PL.lib_simplepie.sys.ini
+/language/pl-PL/pl-PL.mod_breadcrumbs.sys.ini
+/language/pl-PL/pl-PL.com_messages.ini
+/language/pl-PL/pl-PL.mod_login.sys.ini
+/language/pl-PL/pl-PL.mod_custom.ini
+/language/pl-PL/pl-PL.mod_finder.sys.ini
+/language/pl-PL/pl-PL.mod_articles_latest.ini
+/language/pl-PL/pl-PL.ini
+/language/pl-PL/pl-PL.com_media.ini
+/language/pl-PL/pl-PL.mod_articles_news.ini
+/language/pl-PL/pl-PL.com_tags.ini
+/language/pl-PL/pl-PL.lib_idna_convert.sys.ini
+/language/pl-PL/pl-PL.mod_breadcrumbs.ini
+/language/pl-PL/pl-PL.lib_phpass.sys.ini
+/language/pl-PL/pl-PL.mod_languages.sys.ini
+/language/pl-PL/index.html
+/language/pl-PL/pl-PL.mod_feed.ini
+/language/pl-PL/pl-PL.mod_articles_latest.sys.ini
+/language/pl-PL/pl-PL.mod_random_image.sys.ini
+/language/pl-PL/pl-PL.mod_related_items.ini
+/language/pl-PL/pl-PL.tpl_beez3.sys.ini
+/language/pl-PL/pl-PL.mod_random_image.ini
+/language/pl-PL/pl-PL.mod_weblinks.sys.ini
+/language/pl-PL/pl-PL.mod_related_items.sys.ini
+/language/pl-PL/pl-PL.mod_search.ini
+/language/pl-PL/pl-PL.mod_wrapper.ini
+/language/pl-PL/pl-PL.mod_tags_similar.ini
+/language/pl-PL/pl-PL.mod_syndicate.sys.ini
+/language/pl-PL/pl-PL.mod_users_latest.sys.ini
+/language/pl-PL/pl-PL.xml
+/language/pl-PL/pl-PL.mod_tags_similar.sys.ini
+/language/pl-PL/pl-PL.tpl_protostar.ini
+/language/pl-PL/pl-PL.mod_tags_popular.ini
+/language/pl-PL/pl-PL.mod_wrapper.sys.ini
+/language/pl-PL/pl-PL.mod_users_latest.ini
+/language/pl-PL/pl-PL.mod_syndicate.ini
+/language/pl-PL/pl-PL.tpl_protostar.sys.ini
+/language/pl-PL/pl-PL.mod_search.sys.ini
+/language/pl-PL/pl-PL.mod_whosonline.ini
+/language/pl-PL/pl-PL.tpl_beez3.ini
+/language/pl-PL/pl-PL.mod_stats.ini
+/language/pl-PL/pl-PL.mod_menu.sys.ini
+/language/pl-PL/pl-PL.mod_whosonline.sys.ini
+/language/pl-PL/pl-PL.mod_weblinks.ini
+/language/pl-PL/pl-PL.mod_stats.sys.ini
+/language/pl-PL/pl-PL.mod_tags_popular.sys.ini
