--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,6 @@
 /administrator/templates/
 /administrator/index.php
 /administrator/help/
-/administrator/language/
 /administrator/includes/
 /administrator/modules/
 /administrator/cache/
@@ -157,3 +156,210 @@
 /language/pl-PL/pl-PL.mod_weblinks.ini
 /language/pl-PL/pl-PL.mod_stats.sys.ini
 /language/pl-PL/pl-PL.mod_tags_popular.sys.ini
+/administrator/language/pl-PL/pl-PL.com_mailto.sys.ini
+/administrator/language/pl-PL/pl-PL.plg_editors_codemirror.ini
+/administrator/language/pl-PL/pl-PL.com_banners.sys.ini
+/administrator/language/pl-PL/pl-PL.com_languages.sys.ini
+/administrator/language/pl-PL/pl-PL.plg_system_log.sys.ini
+/administrator/language/pl-PL/pl-PL.plg_editors_none.ini
+/administrator/language/pl-PL/pl-PL.com_contenthistory.sys.ini
+/administrator/language/pl-PL/pl-PL.plg_editors_tinymce.ini
+/administrator/language/pl-PL/pl-PL.mod_status.ini
+/administrator/language/pl-PL/pl-PL.plg_system_sef.sys.ini
+/administrator/language/pl-PL/pl-PL.plg_system_cache.sys.ini
+/administrator/language/pl-PL/pl-PL.mod_version.ini
+/administrator/language/pl-PL/pl-PL.plg_system_highlight.ini
+/administrator/language/pl-PL/pl-PL.plg_finder_tags.sys.ini
+/administrator/language/pl-PL/pl-PL.plg_system_sef.ini
+/administrator/language/pl-PL/pl-PL.com_newsfeeds.sys.ini
+/administrator/language/pl-PL/pl-PL.plg_editors-xtd_article.ini
+/administrator/language/pl-PL/pl-PL.mod_feed.sys.ini
+/administrator/language/pl-PL/pl-PL.plg_authentication_cookie.ini
+/administrator/language/pl-PL/pl-PL.plg_content_pagebreak.ini
+/administrator/language/pl-PL/pl-PL.plg_installer_webinstaller.ini
+/administrator/language/pl-PL/pl-PL.plg_search_contacts.ini
+/administrator/language/pl-PL/pl-PL.mod_submenu.sys.ini
+/administrator/language/pl-PL/pl-PL.com_login.ini
+/administrator/language/pl-PL/pl-PL.plg_content_pagenavigation.ini
+/administrator/language/pl-PL/pl-PL.com_modules.ini
+/administrator/language/pl-PL/pl-PL.plg_content_pagenavigation.sys.ini
+/administrator/language/pl-PL/pl-PL.tpl_hathor.sys.ini
+/administrator/language/pl-PL/pl-PL.plg_search_weblinks.sys.ini
+/administrator/language/pl-PL/pl-PL.plg_content_joomla.sys.ini
+/administrator/language/pl-PL/pl-PL.plg_search_tags.sys.ini
+/administrator/language/pl-PL/pl-PL.plg_finder_categories.ini
+/administrator/language/pl-PL/pl-PL.com_installer.ini
+/administrator/language/pl-PL/pl-PL.plg_search_newsfeeds.ini
+/administrator/language/pl-PL/pl-PL.plg_quickicon_extensionupdate.sys.ini
+/administrator/language/pl-PL/pl-PL.com_plugins.ini
+/administrator/language/pl-PL/pl-PL.mod_toolbar.ini
+/administrator/language/pl-PL/pl-PL.mod_custom.sys.ini
+/administrator/language/pl-PL/pl-PL.plg_user_contactcreator.sys.ini
+/administrator/language/pl-PL/pl-PL.com_ajax.sys.ini
+/administrator/language/pl-PL/pl-PL.plg_system_languagefilter.ini
+/administrator/language/pl-PL/install.xml
+/administrator/language/pl-PL/pl-PL.plg_finder_contacts.ini
+/administrator/language/pl-PL/pl-PL.plg_system_remember.ini
+/administrator/language/pl-PL/pl-PL.mod_version.sys.ini
+/administrator/language/pl-PL/pl-PL.lib_joomla.ini
+/administrator/language/pl-PL/pl-PL.plg_editors_none.sys.ini
+/administrator/language/pl-PL/pl-PL.com_login.sys.ini
+/administrator/language/pl-PL/pl-PL.plg_system_remember.sys.ini
+/administrator/language/pl-PL/pl-PL.plg_system_log.ini
+/administrator/language/pl-PL/pl-PL.plg_editors-xtd_pagebreak.sys.ini
+/administrator/language/pl-PL/pl-PL.mod_toolbar.sys.ini
+/administrator/language/pl-PL/pl-PL.plg_twofactorauth_yubikey.sys.ini
+/administrator/language/pl-PL/pl-PL.com_search.sys.ini
+/administrator/language/pl-PL/pl-PL.plg_authentication_gmail.ini
+/administrator/language/pl-PL/pl-PL.mod_latest.sys.ini
+/administrator/language/pl-PL/pl-PL.ini
+/administrator/language/pl-PL/pl-PL.plg_content_finder.sys.ini
+/administrator/language/pl-PL/pl-PL.mod_title.ini
+/administrator/language/pl-PL/pl-PL.plg_system_p3p.ini
+/administrator/language/pl-PL/pl-PL.plg_system_languagefilter.sys.ini
+/administrator/language/pl-PL/pl-PL.plg_twofactorauth_totp.sys.ini
+/administrator/language/pl-PL/pl-PL.com_admin.sys.ini
+/administrator/language/pl-PL/pl-PL.mod_logged.ini
+/administrator/language/pl-PL/pl-PL.com_search.ini
+/administrator/language/pl-PL/pl-PL.plg_finder_weblinks.sys.ini
+/administrator/language/pl-PL/pl-PL.mod_quickicon.ini
+/administrator/language/pl-PL/pl-PL.plg_content_loadmodule.sys.ini
+/administrator/language/pl-PL/pl-PL.com_wrapper.sys.ini
+/administrator/language/pl-PL/pl-PL.plg_authentication_ldap.sys.ini
+/administrator/language/pl-PL/pl-PL.plg_twofactorauth_totp.ini
+/administrator/language/pl-PL/pl-PL.mod_latest.ini
+/administrator/language/pl-PL/pl-PL.plg_captcha_recaptcha.ini
+/administrator/language/pl-PL/pl-PL.plg_system_cache.ini
+/administrator/language/pl-PL/pl-PL.com_weblinks.ini
+/administrator/language/pl-PL/pl-PL.plg_authentication_joomla.ini
+/administrator/language/pl-PL/pl-PL.plg_user_contactcreator.ini
+/administrator/language/pl-PL/pl-PL.plg_twofactorauth_yubikey.ini
+/administrator/language/pl-PL/pl-PL.com_content.sys.ini
+/administrator/language/pl-PL/pl-PL.plg_search_categories.sys.ini
+/administrator/language/pl-PL/pl-PL.com_checkin.ini
+/administrator/language/pl-PL/pl-PL.plg_finder_categories.sys.ini
+/administrator/language/pl-PL/pl-PL.plg_editors-xtd_article.sys.ini
+/administrator/language/pl-PL/pl-PL.plg_user_joomla.sys.ini
+/administrator/language/pl-PL/pl-PL.plg_finder_content.ini
+/administrator/language/pl-PL/pl-PL.com_finder.ini
+/administrator/language/pl-PL/pl-PL.plg_quickicon_extensionupdate.ini
+/administrator/language/pl-PL/pl-PL.plg_search_tags.ini
+/administrator/language/pl-PL/pl-PL.plg_system_debug.sys.ini
+/administrator/language/pl-PL/pl-PL.plg_system_redirect.sys.ini
+/administrator/language/pl-PL/pl-PL.plg_content_contact.sys.ini
+/administrator/language/pl-PL/pl-PL.mod_logged.sys.ini
+/administrator/language/pl-PL/pl-PL.mod_popular.sys.ini
+/administrator/language/pl-PL/pl-PL.com_ajax.ini
+/administrator/language/pl-PL/pl-PL.plg_extension_joomla.ini
+/administrator/language/pl-PL/pl-PL.plg_finder_newsfeeds.sys.ini
+/administrator/language/pl-PL/pl-PL.plg_editors-xtd_readmore.ini
+/administrator/language/pl-PL/pl-PL.com_templates.sys.ini
+/administrator/language/pl-PL/pl-PL.plg_extension_joomla.sys.ini
+/administrator/language/pl-PL/pl-PL.plg_search_categories.ini
+/administrator/language/pl-PL/pl-PL.com_tags.ini
+/administrator/language/pl-PL/pl-PL.plg_search_newsfeeds.sys.ini
+/administrator/language/pl-PL/pl-PL.mod_stats_admin.sys.ini
+/administrator/language/pl-PL/pl-PL.plg_system_logout.ini
+/administrator/language/pl-PL/pl-PL.plg_quickicon_joomlaupdate.ini
+/administrator/language/pl-PL/pl-PL.plg_system_logout.sys.ini
+/administrator/language/pl-PL/pl-PL.com_messages.sys.ini
+/administrator/language/pl-PL/pl-PL.com_languages.ini
+/administrator/language/pl-PL/pl-PL.com_templates.ini
+/administrator/language/pl-PL/pl-PL.plg_system_p3p.sys.ini
+/administrator/language/pl-PL/pl-PL.com_contenthistory.ini
+/administrator/language/pl-PL/pl-PL.com_postinstall.sys.ini
+/administrator/language/pl-PL/pl-PL.plg_finder_weblinks.ini
+/administrator/language/pl-PL/pl-PL.plg_finder_contacts.sys.ini
+/administrator/language/pl-PL/pl-PL.com_cpanel.sys.ini
+/administrator/language/pl-PL/pl-PL.plg_quickicon_joomlaupdate.sys.ini
+/administrator/language/pl-PL/pl-PL.mod_login.ini
+/administrator/language/pl-PL/pl-PL.com_cache.ini
+/administrator/language/pl-PL/pl-PL.localise.php
+/administrator/language/pl-PL/pl-PL.com_messages.ini
+/administrator/language/pl-PL/pl-PL.com_banners.ini
+/administrator/language/pl-PL/pl-PL.com_modules.sys.ini
+/administrator/language/pl-PL/pl-PL.mod_custom.ini
+/administrator/language/pl-PL/pl-PL.plg_finder_tags.ini
+/administrator/language/pl-PL/pl-PL.com_config.ini
+/administrator/language/pl-PL/pl-PL.plg_editors_tinymce.sys.ini
+/administrator/language/pl-PL/pl-PL.com_contact.sys.ini
+/administrator/language/pl-PL/pl-PL.plg_finder_newsfeeds.ini
+/administrator/language/pl-PL/pl-PL.com_admin.ini
+/administrator/language/pl-PL/pl-PL.com_users.sys.ini
+/administrator/language/pl-PL/pl-PL.plg_authentication_gmail.sys.ini
+/administrator/language/pl-PL/pl-PL.com_checkin.sys.ini
+/administrator/language/pl-PL/pl-PL.com_plugins.sys.ini
+/administrator/language/pl-PL/pl-PL.plg_captcha_recaptcha.sys.ini
+/administrator/language/pl-PL/pl-PL.com_media.ini
+/administrator/language/pl-PL/pl-PL.plg_editors-xtd_image.ini
+/administrator/language/pl-PL/pl-PL.com_media.sys.ini
+/administrator/language/pl-PL/pl-PL.plg_content_pagebreak.sys.ini
+/administrator/language/pl-PL/pl-PL.mod_multilangstatus.ini
+/administrator/language/pl-PL/pl-PL.plg_content_emailcloak.sys.ini
+/administrator/language/pl-PL/pl-PL.plg_authentication_cookie.sys.ini
+/administrator/language/pl-PL/pl-PL.com_weblinks.sys.ini
+/administrator/language/pl-PL/pl-PL.mod_popular.ini
+/administrator/language/pl-PL/pl-PL.plg_search_content.sys.ini
+/administrator/language/pl-PL/pl-PL.com_users.ini
+/administrator/language/pl-PL/pl-PL.plg_system_redirect.ini
+/administrator/language/pl-PL/pl-PL.com_installer.sys.ini
+/administrator/language/pl-PL/pl-PL.plg_editors-xtd_pagebreak.ini
+/administrator/language/pl-PL/pl-PL.com_finder.sys.ini
+/administrator/language/pl-PL/pl-PL.plg_editors-xtd_readmore.sys.ini
+/administrator/language/pl-PL/pl-PL.com_config.sys.ini
+/administrator/language/pl-PL/pl-PL.com_categories.sys.ini
+/administrator/language/pl-PL/pl-PL.com_joomlaupdate.ini
+/administrator/language/pl-PL/pl-PL.tpl_isis.ini
+/administrator/language/pl-PL/pl-PL.mod_stats_admin.ini
+/administrator/language/pl-PL/pl-PL.com_newsfeeds.ini
+/administrator/language/pl-PL/pl-PL.plg_content_contact.ini
+/administrator/language/pl-PL/pl-PL.com_menus.sys.ini
+/administrator/language/pl-PL/pl-PL.mod_login.sys.ini
+/administrator/language/pl-PL/pl-PL.plg_content_vote.ini
+/administrator/language/pl-PL/pl-PL.plg_editors-xtd_image.sys.ini
+/administrator/language/pl-PL/pl-PL.plg_content_finder.ini
+/administrator/language/pl-PL/pl-PL.plg_content_emailcloak.ini
+/administrator/language/pl-PL/pl-PL.plg_content_vote.sys.ini
+/administrator/language/pl-PL/pl-PL.mod_menu.ini
+/administrator/language/pl-PL/pl-PL.plg_search_weblinks.ini
+/administrator/language/pl-PL/pl-PL.mod_status.sys.ini
+/administrator/language/pl-PL/pl-PL.com_redirect.ini
+/administrator/language/pl-PL/pl-PL.xml
+/administrator/language/pl-PL/pl-PL.com_joomlaupdate.sys.ini
+/administrator/language/pl-PL/pl-PL.plg_authentication_joomla.sys.ini
+/administrator/language/pl-PL/pl-PL.com_contact.ini
+/administrator/language/pl-PL/pl-PL.plg_search_contacts.sys.ini
+/administrator/language/pl-PL/pl-PL.plg_system_debug.ini
+/administrator/language/pl-PL/pl-PL.mod_quickicon.sys.ini
+/administrator/language/pl-PL/pl-PL.tpl_hathor.ini
+/administrator/language/pl-PL/pl-PL.com_content.ini
+/administrator/language/pl-PL/pl-PL.com_postinstall.ini
+/administrator/language/pl-PL/pl-PL.mod_submenu.ini
+/administrator/language/pl-PL/pl-PL.plg_search_content.ini
+/administrator/language/pl-PL/pl-PL.plg_user_profile.ini
+/administrator/language/pl-PL/pl-PL.mod_multilangstatus.sys.ini
+/administrator/language/pl-PL/pl-PL.tpl_isis.sys.ini
+/administrator/language/pl-PL/pl-PL.plg_finder_content.sys.ini
+/administrator/language/pl-PL/pl-PL.com_menus.ini
+/administrator/language/pl-PL/pl-PL.plg_authentication_ldap.ini
+/administrator/language/pl-PL/pl-PL.plg_content_joomla.ini
+/administrator/language/pl-PL/pl-PL.plg_content_loadmodule.ini
+/administrator/language/pl-PL/pl-PL.plg_installer_webinstaller.sys.ini
+/administrator/language/pl-PL/pl-PL.com_categories.ini
+/administrator/language/pl-PL/index.html
+/administrator/language/pl-PL/pl-PL.mod_title.sys.ini
+/administrator/language/pl-PL/pl-PL.com_cpanel.ini
+/administrator/language/pl-PL/pl-PL.plg_user_profile.sys.ini
+/administrator/language/pl-PL/pl-PL.plg_system_highlight.sys.ini
+/administrator/language/pl-PL/pl-PL.mod_feed.ini
+/administrator/language/pl-PL/pl-PL.com_cache.sys.ini
+/administrator/language/pl-PL/pl-PL.com_tags.sys.ini
+/administrator/language/pl-PL/pl-PL.com_redirect.sys.ini
+/administrator/language/pl-PL/pl-PL.plg_editors_codemirror.sys.ini
+/administrator/language/pl-PL/pl-PL.mod_menu.sys.ini
+/administrator/language/pl-PL/pl-PL.plg_system_languagecode.sys.ini
+/administrator/language/pl-PL/pl-PL.com_wrapper.ini
+/administrator/language/pl-PL/pl-PL.plg_user_joomla.ini
+/administrator/language/pl-PL/pl-PL.plg_system_languagecode.ini
+/administrator/language/en-GB/
+/administrator/language/overrides/
