--- a/.gitignore
+++ b/.gitignore
@@ -363,3 +363,4 @@
 /administrator/language/pl-PL/pl-PL.plg_system_languagecode.ini
 /administrator/language/en-GB/
 /administrator/language/overrides/
+/nbproject
