zmiana katalogu css, js i images na media

--- a/.gitignore
+++ b/.gitignore
@@ -363,3 +363,20 @@
 /administrator/language/en-GB/
 /administrator/language/overrides/
 /nbproject
+/media/com_contenthistory/
+/media/com_joomlaupdate/
+/media/com_finder/
+/media/cms/
+/media/plg_system_highlight/
+/media/index.html
+/media/editors/
+/media/mailto/
+/media/plg_quickicon_extensionupdate/
+/media/jui/
+/media/mod_languages/
+/media/plg_quickicon_joomlaupdate/
+/media/com_wrapper/
+/media/overrider/
+/media/contacts/
+/media/media/
+/media/system/
